[gd_scene load_steps=3 format=2]

[ext_resource path="res://tanks/Turret.tscn" type="PackedScene" id=1]
[ext_resource path="res://tanks/MissileTurret.gd" type="Script" id=2]

[node name="MissileTurret" instance=ExtResource( 1 )]
script = ExtResource( 2 )
TURN_RATE = 1.0
MAX_AMMO = 4.0
FIRE_RATE = 0.4
RELOAD_TIME = 3.0
MAX_ENGAGE_DISTANCE = 45.0
MAX_CHASE_DISTANCE = 90.0

[node name="Gun" parent="CSGCombiner/Body/Turret" index="0"]
visible = false

[node name="MuzzleInterior" parent="CSGCombiner/Body/Turret/Gun" index="0"]
visible = false

[node name="Launcher1" type="CSGCylinder" parent="CSGCombiner/Body/Turret" index="1"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0.17, 0, 0 )
radius = 0.1
height = 0.5

[node name="Launcher3" type="CSGCylinder" parent="CSGCombiner/Body/Turret" index="2"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0.17, 0.1, 0.1 )
radius = 0.1
height = 0.5

[node name="Launcher2" type="CSGCylinder" parent="CSGCombiner/Body/Turret" index="3"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -0.17, 0, 0 )
radius = 0.1
height = 0.5

[node name="Launcher4" type="CSGCylinder" parent="CSGCombiner/Body/Turret" index="4"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -0.17, 0.1, 0.1 )
radius = 0.1
height = 0.5

[node name="MissileSpawn1" type="Position3D" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0.176751, 0.310827, -0.18481 )

[node name="MissileSpawn3" type="Position3D" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0.177, 0.411, -0.085 )

[node name="MissileSpawn2" type="Position3D" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, -0.177, 0.311, -0.185 )

[node name="MissileSpawn4" type="Position3D" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, -0.177, 0.411, -0.085 )
